[workspace]
resolver = "2"
members = ["crates/*", "examples/native", "examples/relay", "examples/snark"]

[workspace.package]
version = "0.12.0"
edition = "2021"
license = "GPL-3.0"
authors = ["RND <dev@ringsnetwork.io>"]
repository = "https://github.com/RyanKung/rings"

[workspace.dependencies]
async-trait = "0.1.77"
js-sys = "0.3.98"
jsonrpc-core = "18.0.0"
rings-core = { path = "crates/core", version = "0.12.0", default-features = false }
rings-derive = { path = "crates/derive", version = "0.12.0", default-features = false }
rings-node = { path = "crates/node", version = "0.12.0" }
rings-rpc = { path = "crates/rpc", version = "0.12.0", default-features = false }
rings-snark = { path = "crates/snark", version = "0.12.0", default-features = false }
rings-transport = { path = "crates/transport", version = "0.12.0" }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.121"
wasm-bindgen-futures = "0.4.71"
wasm-bindgen-macro-support = "0.2.121"
wasm-bindgen-test = "0.3.71"
webrtc = { version = "0.17.1" }

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
indexing_slicing = "deny"

[profile.release]
opt-level = 3
lto = true
strip = true
