[package]
name = "rings-browser-example"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

# Browser-only: the whole crate is `#![cfg(target_arch = "wasm32")]`, so on native it
# is an empty lib (keeps `cargo build --workspace` green) and only pulls these deps for
# wasm. Build it with `wasm-pack build examples/browser`.
[target.'cfg(target_arch = "wasm32")'.dependencies]
rings-node = { path = "../../crates/node", default-features = false, features = ["browser"] }
wasm-bindgen = "0.2"
js-sys = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
rings-core = { workspace = true }
bytes = "1"
