[package]
name = "rings-proof-demo"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
publish = false

# Standalone wasm/Yew app (build with Trunk). The empty `[workspace]` table excludes it
# from the repo's root workspace — this avoids feature unification with the native
# examples (which would drag `rings-node`'s `node` features, and tokio-net/mio, into the
# wasm build). A committed `Cargo.lock` (copied from the repo root) pins the SNARK deps
# to the versions that build for wasm32.
[workspace]

[dependencies]
gloo-timers = { version = "0.3", features = ["futures"] }
rings-node = { path = "../../crates/node", default-features = false, features = ["browser_default"] }
wasm-bindgen = "=0.2.100"
wasm-bindgen-futures = "=0.4.50"
web-sys = { version = "=0.3.77", features = ["HtmlInputElement"] }
yew = { version = "0.21", features = ["csr"] }

[dev-dependencies]
wasm-bindgen-test = "=0.3.50"
